--- a/config
+++ b/config
@@ -1,7 +1,20 @@
 ngx_module_type=HTTP_AUX_FILTER
-ngx_module_name=ngx_http_dechunk_module
-ngx_module_srcs="$ngx_addon_dir/ngx_http_dechunk_module.c"
+ngx_module_name=ngx_http_cache_dechunk_filter_module
+ngx_module_srcs="$ngx_addon_dir/$ngx_module_name.c"
+ngx_module_order="$ngx_module_name \
+                  ngx_http_copy_filter_module \
+                  ngx_http_range_body_filter_module \
+                  ngx_http_not_modified_filter_module \
+                  ngx_http_slice_filter_module"
 
 . auto/module
 
 ngx_addon_name=$ngx_module_name
+
+if [ "$ngx_module_link" != DYNAMIC ]; then
+    last=ngx_http_copy_filter_module
+
+    HTTP_FILTER_MODULES=`echo $HTTP_FILTER_MODULES \
+                     | sed "s/ $ngx_module_name//" \
+                     | sed "s/$last/$ngx_module_name $last/"`
+fi
